Jeu_de_tests/correct/decl.tpc
int a,b;

int main(int a, int main){
    int b;
    return 0;
}
