Jeu_de_tests/error/flex_2.tpc
/*  /*  #include <stdio.h> */
int r1, r2;

int main(void) {
    int b, c;
    return 0;
}
